Fix ticket meta spacing

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -252,6 +252,10 @@ hr.form-divider {
 .ticket-meta {
   margin-top: 5px;
   margin-bottom: 5px;
+
+  h4 {
+    margin-bottom: 1rem;
+  }
 }
 
 table.table > thead > tr > th {
